--- a/.env
+++ b/.env
@@ -40,10 +40,10 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/HopExpress?serverVersion=10.4.27-Mari
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=gmail+smtp://hopeandprod@gmail.com:Sonia20051984*@default
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+MAILER_DSN=gmail://hopeandprod@gmail.com:Sonia20051984*@default?verify_peer=0
 ###< symfony/google-mailer ###
